tests/errors/sem.type-mismatch.block-jmps.or
main :: () -> void {
    x := do {
        x := true;
        if x then break 10;
        true;
    };
    
    x;
};
